--- a/index.html
+++ b/index.html
@@ -1,38 +1,148 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
+    <!--
+      If you are serving your web app in a path other than the root, change the
+      href value below to reflect the base path you are serving from.
 
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
+      The path provided below has to start and end with a slash "/" in order for
+      it to work correctly.
 
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+      For more details:
+      * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
 
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
-  <base href="/">
+      This is a placeholder for base href that will be replaced by the value of
+      the `--base-href` argument provided to `flutter build`.
+    -->
+    <base href="/">
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+    <meta charset="UTF-8">
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+    <meta name="description" content="A new Flutter project.">
 
-  <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="activity_guide">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <!-- iOS meta tags & icons -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="activity_guide">
+    <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>Activity Guide</title>
-  <link rel="manifest" href="manifest.json">
+    <title>Activity Guide</title>
+    <link rel="manifest" href="manifest.json">
+
+    <style>
+
+        html, body {
+        height: 100%; /* Ensure the body and html are full height */
+        margin: 0;    /* Remove default margin */
+    }
+
+    .landing-page {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;  /* Vertically centers the content */
+        align-items: center;      /* Horizontally centers the content */
+        height: 100%;             /* Take full height of the viewport */
+        text-align: center;       /* Center text inside the container */
+        font-family: sans-serif;  /* Set font family */
+    }
+
+
+          .activity {
+              background-color: #006400;
+              color: white;
+              padding: 10px;
+              text-align: right;
+          }
+
+          .guide {
+              color: #006400;
+              padding: 10px;
+          }
+
+          .title {
+              font-size: 48px;
+              font-weight: bold;
+              display: inline-block;
+          }
+
+          .description {
+              font-size: 16px;
+              font-weight: bold;
+              margin-bottom: 50px;
+          }
+
+          @media (max-width: 600px) {
+              .title {
+                  font-size: 36px;
+              }
+          }
+
+          .company {
+              font-size: 24px;
+              font-weight: bold;
+              margin: 4px;
+          }
+
+          .loader {
+              box-sizing: border-box;
+              position: relative;
+              width: 48px;
+              height: 48px;
+              animation: spin 1s linear infinite;
+              margin-top: 20px; /* Add some margin above the loader */
+          }
+
+          .loader:after, .loader:before {
+              content: "";
+              width: 24px;
+              height: 24px;
+              position: absolute;
+              border-radius: 50%;
+              background: #FF3D00;
+              animation: spin 1s linear infinite;
+              transform-origin: 0px 100%;
+          }
+
+          .loader:before {
+              transform-origin: 0 50%;
+              background: #008000;
+          }
+
+          @keyframes spin {
+              to {
+                  transform: rotate(360deg);
+              }
+          }
+
+    </style>
+
+
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+<div class="landing-page">
+    <!-- Logo -->
+    <img src="images/nbs.png" alt="nbs logo" style="width:100px;height:100px;margin-bottom: 20px;">
+    <!-- Title and Description -->
+    <div class="text-container">
+        <h1 class="title">
+            <span class="activity">ACTIVITY</span>
+            <span class="guide">GUIDE</span>
+        </h1>
+        <p class="description">MONITORING AND EVALUATING WORKPLANS OF 16 DEPTS/UNITS</p>
+    </div>
+
+    <!-- Footer with Branding -->
+    <div class="footer">
+        <p>Powered by</p>
+        <p class="company">SmarterWay Solutions Ltd</p>
+    </div>
+
+    <!-- Loader (Centered) -->
+    <div class="loader"></div>
+</div>
+<script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
