--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <body>
 <div class="landing-page">
     <!-- Logo -->
-    <img src="favicon.png" alt="nbs logo" style="width:100px;height:100px;margin-bottom: 20px;">
+    <img src="images/nbs.png" alt="nbs logo" style="width:100px;height:100px;margin-bottom: 20px;">
     <!-- Title and Description -->
     <div class="text-container">
         <h1 class="title">
