--- a/404.html
+++ b/404.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page not foundSopulu</title>
+    <title>Page not found</title>
     <script type="text/javascript">
       // Redirect to index.html
-     // window.location.replace("/");
+     window.location.replace("/");
     </script>
   </head>
   <body>
