--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           font-size: 18px;
           border: none;
           border-radius: 25px;
-          padding: 16px 32px;
+          padding: 12px;
           cursor: pointer;
           box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
           transition: background-color 0.3s;
