--- a/index.html
+++ b/index.html
@@ -1,268 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="/">
+  <base href="/">
 
-    <meta charset="UTF-8">
-    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="A new Flutter project.">
+  <meta charset="UTF-8">
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta name="description" content="A new Flutter project.">
 
-    <!-- iOS meta tags & icons -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="activity_guide">
-    <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <!-- iOS meta tags & icons -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="attendance_system">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png"/>
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
-    <link rel="manifest" href="manifest.json">
-    <script type="application/javascript" src="/assets/packages/flutter_inappwebview_web/assets/web/web_support.js" defer></script>
+  <title>attendance_system</title>
+  <link rel="manifest" href="manifest.json">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activity Guide</title>
-    <link href="https://fonts.googleapis.com/css2?family=Actor&family=Adamina&family=Roboto&display=swap" rel="stylesheet">
-    <style>
-        /* General reset and body styling */
-        * {
-          margin: 0;
-          padding: 0;
-          box-sizing: border-box;
-        }
+  <!-- This script adds the flutter initialization JS code -->
+  <script src="flutter.js" defer></script>
 
-        body {
-          font-family: 'Roboto', sans-serif;
-          background-color: #ffffff;
-          color: #333;
-          padding: 20px 36px; /* Reduced padding above */
-        }
-
-        .container {
-          max-width: 1200px;
-          margin: 0 auto;
-        }
-
-        /* AppBar */
-        .appbar {
-          background-color: #ffffff;
-          padding: 16px;
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          position: sticky;
-          top: 0;
-         // z-index: 1000;
-          //box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-          margin-bottom: 16px; /* Added space under the AppBar */
-        }
-
-        .appbar .title {
-          font-size: 24px;
-          font-weight: bold;
-          color: #067329;
-        }
-
-        .appbar .title span {
-          background-color: #067329;
-          color: white;
-          padding: 4px 8px;
-        }
-
-        .appbar .user-icon {
-          cursor: pointer;
-          color: #067329;
-          font-size: 24px;
-        }
-
-        /* Welcome Note */
-        .welcome-note p {
-          font-size: 24px;
-          font-weight: 600;
-          text-align: justify;
-          margin-bottom: 24px;
-        }
-
-        /* Features Section */
-        .features h2 {
-          font-size: 24px;
-          color: #067329; /* The updated color */
-          font-weight: bold;
-          text-align: center;
-          margin-bottom: 24px;
-        }
-
-        .feature-cards {
-          display: grid;
-          grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-          gap: 24px;
-        }
-
-        /* Feature Cards (adjust for large screen) */
-        @media (min-width: 768px) {
-          .feature-cards {
-            grid-template-columns: repeat(2, 1fr);
-          }
-        }
-
-        .feature-card {
-          padding: 16px;
-          background-color: #f9f9f9;
-          border: 1px solid #ddd;
-          border-radius: 8px;
-        }
-
-        .feature-card h3 {
-          font-size: 18px;
-          font-weight: bold;
-          color: #067329;
-        }
-
-        .feature-card p {
-          font-size: 16px;
-          color: #555;
-          text-align: justify;
-          margin-top: 8px;
-        }
-
-        /* Footer */
-        .footer {
-          margin-top: 50px;
-          text-align: center;
-        }
-
-        .footer p {
-          font-size: 18px;
-        }
-
-        .company-name {
-          font-size: 24px;
-          font-weight: bold;
-        }
-
-        /* Floating "Get Started" Button */
-        .get-started-btn {
-          position: fixed;
-          right: 20px;
-          bottom: 20px;
-          background-color: #067329; /* Updated color */
-          color: white;
-          font-size: 18px;
-          border: none;
-          border-radius: 25px;
-          padding: 12px;
-          cursor: pointer;
-          box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-          transition: background-color 0.3s;
-        }
-
-        .get-started-btn:hover {
-          background-color: #055d26; /* Slightly darker green for hover */
-        }
-    /* Loader */
-        .loader {
-      box-sizing: border-box;
-      position: absolute; /* Change to absolute */
-      top: 50%; /* Center vertically */
-      left: 50%; /* Center horizontally */
-      transform: translate(-50%, -50%); /* Adjust to truly center the loader */
-      width: 48px;
-      height: 48px;
-      animation: spin 1s linear infinite;
-      margin-top: 20px; /* Add some margin above the loader */
-      display: none; /* Initially hide the loader */
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #ffffff;
+      color: #333;
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
+    /* Loader styling */
+    .loader {
+      width: 60px;
+      height: 60px;
+      border: 8px solid #f3f3f3;
+      border-top: 8px solid #3498db;
+      border-radius: 50%;
+      animation: spin 2s linear infinite;
+    }
 
-        .loader:after, .loader:before {
-          content: "";
-          width: 24px;
-          height: 24px;
-          position: absolute;
-          border-radius: 50%;
-          background: #FF3D00;
-          animation: spin 1s linear infinite;
-          transform-origin: 0px 100%;
-        }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
 
-        .loader:before {
-          transform-origin: 0 50%;
-          background: #008000;
-        }
-
-        @keyframes spin {
-          to {
-            transform: rotate(360deg);
-          }
-        }
-
-    </style>
+    /* Hide the loader and content until Flutter loads */
+    .loading-text {
+      font-size: 18px;
+      color: #3498db;
+      margin-top: 20px;
+      display: block;
+    }
+  </style>
 </head>
 <body>
 
-<!-- AppBar -->
-<div>
-    <div class="appbar">
-        <div class="title">
-            <span>ACTIVITY</span> GUIDE
-        </div>
-    </div>
+  <!-- Loader -->
+  <div id="loadingContainer">
+    <div class="loader"></div>
+    <div class="loading-text">Loading App...</div>
+  </div>
 
-    <div class="container">
-        <section class="welcome-note">
-            <p>Welcome to Activity Guide. Our app provides essential tools for effective project management, from comprehensive activity templates to real-time dashboards, ensuring your corporate planning runs smoothly.</p>
-        </section>
+  <script>
+    // Wait for Flutter to load and initialize
+    const loadingContainer = document.getElementById('loadingContainer');
 
-        <section class="features">
-            <h2>Features of Activity Guide</h2>
-            <div class="feature-cards">
-                <div class="feature-card">
-                    <h3>Activity Guide Template</h3>
-                    <p>Leverage our customizable activity templates designed to meet your specific project needs, ensuring you have the right structure for effective planning.</p>
-                </div>
-                <div class="feature-card">
-                    <h3>Real-time Dashboard</h3>
-                    <p>Our user-friendly dashboard provides real-time updates and insights into your project’s progress, allowing for quick adjustments and informed decision-making.</p>
-                </div>
-                <div class="feature-card">
-                    <h3>Feedback Collection</h3>
-                    <p>We facilitate easy feedback collection from stakeholders, ensuring you gather valuable insights that drive project improvements and success.</p>
-                </div>
-                <div class="feature-card">
-                    <h3>Notification Alerts</h3>
-                    <p>Stay informed with our notification system that alerts you to important updates and deadlines, helping you manage your projects proactively.</p>
-                </div>
-            </div>
-        </section>
+    window._flutter = window._flutter || {};
+    window._flutter.loader = window._flutter.loader || new (class {
+      async loadEntrypoint({ serviceWorker, ...config } = {}) {
+        const loadingText = document.querySelector('.loading-text');
+        loadingText.textContent = "Initializing Flutter...";
 
-        <section class="footer">
-            <p>Powered by</p>
-            <p class="company-name">SmarterWay Solutions Ltd</p>
-        </section>
-        <!-- Loader -->
-        <div class="loader" id="loader"></div>
-        <!-- Floating "Get Started" Button -->
-        <button class="get-started-btn" onclick="openGetStarted()" id="loadScriptBtn">Get Started</button>
-    </div>
-</div>
+        await this._loadServiceWorker(serviceWorker);
 
-<script>
-    function openGetStarted() {
-     document.getElementById('loader').style.display = 'block'; // Show loader
-     document.querySelector('.get-started-btn').style.display = 'none';
-    }
-</script>
-<script>
-    document.getElementById("loadScriptBtn").addEventListener("click", function() {
-      // Create a script element
-      var script = document.createElement("script");
-      script.src = "flutter_bootstrap.js?v=3.1.3"; // Specify the script's source
-      script.async = true; // Set async attribute to true
-      document.body.appendChild(script); // Append the script to the body
+        const appRunner = await this._initializeFlutterEngine(config);
+        loadingText.textContent = "Running Flutter App...";
+        await appRunner.runApp();
+      }
+
+      async _loadServiceWorker(serviceWorker) {
+        if (serviceWorker) {
+          const swUrl = new URL('flutter_service_worker.js', document.baseURI);
+          await navigator.serviceWorker.register(swUrl);
+        }
+      }
+
+      async _initializeFlutterEngine(config) {
+        const entrypointUrl = new URL(config.mainJsPath || 'main.dart.js', document.baseURI);
+        const script = document.createElement('script');
+        script.src = entrypointUrl.toString();
+        script.async = true;
+        script.onload = () => { /* Flutter app initialized */ };
+        document.head.appendChild(script);
+
+        return { runApp: () => window.flutterEngine.runApp() };
+      }
+    })();
+
+    // Start loading Flutter
+    window._flutter.loader.loadEntrypoint({
+      serviceWorker: { version: "1", url: "flutter_service_worker.js" },
+      mainJsPath: "main.dart.js"
+    }).then(() => {
+      // Hide the loading spinner once Flutter is ready
+      loadingContainer.style.display = 'none';
+    }).catch(err => {
+      console.error("Flutter loader error:", err);
+      document.querySelector('.loading-text').textContent = "Failed to load Flutter App";
     });
-</script>
-
-<!-- Font Awesome for user icon -->
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  </script>
 
 </body>
 </html>
