--- a/index.html
+++ b/index.html
@@ -23,19 +23,237 @@
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="attendance_system">
+  <meta name="apple-mobile-web-app-title" content="activity_guide">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>attendance_system</title>
+<title>Activity Guide</title>
   <link rel="manifest" href="manifest.json">
+ <style>
+        /* General reset and body styling */
+        * {
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+        }
 
+        body {
+          font-family: 'Roboto', sans-serif;
+          background-color: #ffffff;
+          color: #333;
+          padding: 20px 36px; /* Reduced padding above */
+        }
+
+        .container {
+          max-width: 1200px;
+          margin: 0 auto;
+        }
+
+        /* AppBar */
+        .appbar {
+          background-color: #ffffff;
+          padding: 16px;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          position: sticky;
+          top: 0;
+         // z-index: 1000;
+          //box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+          margin-bottom: 16px; /* Added space under the AppBar */
+        }
+
+        .appbar .title {
+          font-size: 24px;
+          font-weight: bold;
+          color: #067329;
+        }
+
+        .appbar .title span {
+          background-color: #067329;
+          color: white;
+          padding: 4px 8px;
+        }
+
+        .appbar .user-icon {
+          cursor: pointer;
+          color: #067329;
+          font-size: 24px;
+        }
+
+        /* Welcome Note */
+        .welcome-note p {
+          font-size: 24px;
+          font-weight: 600;
+          text-align: justify;
+          margin-bottom: 24px;
+        }
+
+        /* Features Section */
+        .features h2 {
+          font-size: 24px;
+          color: #067329; /* The updated color */
+          font-weight: bold;
+          text-align: center;
+          margin-bottom: 24px;
+        }
+
+        .feature-cards {
+          display: grid;
+          grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+          gap: 24px;
+        }
+
+        /* Feature Cards (adjust for large screen) */
+        @media (min-width: 768px) {
+          .feature-cards {
+            grid-template-columns: repeat(2, 1fr);
+          }
+        }
+
+        .feature-card {
+          padding: 16px;
+          background-color: #f9f9f9;
+          border: 1px solid #ddd;
+          border-radius: 8px;
+        }
+
+        .feature-card h3 {
+          font-size: 18px;
+          font-weight: bold;
+          color: #067329;
+        }
+
+        .feature-card p {
+          font-size: 16px;
+          color: #555;
+          text-align: justify;
+          margin-top: 8px;
+        }
+
+        /* Footer */
+        .footer {
+          margin-top: 50px;
+          text-align: center;
+        }
+
+        .footer p {
+          font-size: 18px;
+        }
+
+        .company-name {
+          font-size: 24px;
+          font-weight: bold;
+        }
+
+        /* Floating "Get Started" Button */
+        .get-started-btn {
+          position: fixed;
+          right: 20px;
+          bottom: 20px;
+          background-color: #067329; /* Updated color */
+          color: white;
+          font-size: 18px;
+          border: none;
+          border-radius: 25px;
+          padding: 12px;
+          cursor: pointer;
+          box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+          transition: background-color 0.3s;
+        }
+
+        .get-started-btn:hover {
+          background-color: #055d26; /* Slightly darker green for hover */
+        }
+    /* Loader */
+        .loader {
+      box-sizing: border-box;
+      position: absolute; /* Change to absolute */
+      top: 50%; /* Center vertically */
+      left: 50%; /* Center horizontally */
+      transform: translate(-50%, -50%); /* Adjust to truly center the loader */
+      width: 48px;
+      height: 48px;
+      animation: spin 1s linear infinite;
+      margin-top: 20px; /* Add some margin above the loader */
+      display: none; /* Initially hide the loader */
+    }
+
+
+        .loader:after, .loader:before {
+          content: "";
+          width: 24px;
+          height: 24px;
+          position: absolute;
+          border-radius: 50%;
+          background: #FF3D00;
+          animation: spin 1s linear infinite;
+          transform-origin: 0px 100%;
+        }
+
+        .loader:before {
+          transform-origin: 0 50%;
+          background: #008000;
+        }
+
+        @keyframes spin {
+          to {
+            transform: rotate(360deg);
+          }
+        }
+
+    </style>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  
+<!-- AppBar -->
+<div>
+    <div class="appbar">
+        <div class="title">
+            <span>ACTIVITY</span> GUIDE
+        </div>
+    </div>
+
+    <div class="container">
+        <section class="welcome-note">
+            <p>Welcome to Activity Guide. Our app provides essential tools for effective project management, from comprehensive activity templates to real-time dashboards, ensuring your corporate planning runs smoothly.</p>
+        </section>
+
+        <section class="features">
+            <h2>Features of Activity Guide</h2>
+            <div class="feature-cards">
+                <div class="feature-card">
+                    <h3>Activity Guide Template</h3>
+                    <p>Leverage our customizable activity templates designed to meet your specific project needs, ensuring you have the right structure for effective planning.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Real-time Dashboard</h3>
+                    <p>Our user-friendly dashboard provides real-time updates and insights into your project’s progress, allowing for quick adjustments and informed decision-making.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Feedback Collection</h3>
+                    <p>We facilitate easy feedback collection from stakeholders, ensuring you gather valuable insights that drive project improvements and success.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Notification Alerts</h3>
+                    <p>Stay informed with our notification system that alerts you to important updates and deadlines, helping you manage your projects proactively.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="footer">
+            <p>Powered by</p>
+            <p class="company-name">SmarterWay Solutions Ltd</p>
+        </section>
+        <!-- Loader -->
+        <div class="loader" id="loader"></div>
+    </div>
+</div>
+
   <script>
 (()=>{var L=()=>navigator.vendor==="Google Inc."||navigator.agent==="Edg/",W=()=>typeof ImageDecoder>"u"?!1:L(),E=()=>typeof Intl.v8BreakIterator<"u"&&typeof Intl.Segmenter<"u",P=()=>{let s=[0,97,115,109,1,0,0,0,1,5,1,95,1,120,0];return WebAssembly.validate(new Uint8Array(s))},p={hasImageCodecs:W(),hasChromiumBreakIterators:E(),supportsWasmGC:P(),crossOriginIsolated:window.crossOriginIsolated};function u(...s){return new URL(S(...s),document.baseURI).toString()}function S(...s){return s.filter(t=>!!t).map((t,i)=>i===0?_(t):j(_(t))).filter(t=>t.length).join("/")}function j(s){let t=0;for(;t<s.length&&s.charAt(t)==="/";)t++;return s.substring(t)}function _(s){let t=s.length;for(;t>0&&s.charAt(t-1)==="/";)t--;return s.substring(0,t)}function b(s,t){return s.canvasKitBaseUrl?s.canvasKitBaseUrl:t.engineRevision&&!t.useLocalCanvasKit?S("https://www.gstatic.com/flutter-canvaskit",t.engineRevision):"canvaskit"}var h=class{constructor(){this._scriptLoaded=!1}setTrustedTypesPolicy(t){this._ttPolicy=t}async loadEntrypoint(t){let{entrypointUrl:i=u("main.dart.js"),onEntrypointLoaded:r,nonce:e}=t||{};return this._loadJSEntrypoint(i,r,e)}async load(t,i,r,e,n){n??=o=>{o.initializeEngine(r).then(l=>l.runApp())};let{entryPointBaseUrl:a}=r;if(t.compileTarget==="dart2wasm")return this._loadWasmEntrypoint(t,i,a,n);{let o=t.mainJsPath??"main.dart.js",l=u(a,o);return this._loadJSEntrypoint(l,n,e)}}didCreateEngineInitializer(t){typeof this._didCreateEngineInitializerResolve=="function"&&(this._didCreateEngineInitializerResolve(t),this._didCreateEngineInitializerResolve=null,delete _flutter.loader.didCreateEngineInitializer),typeof this._onEntrypointLoaded=="function"&&this._onEntrypointLoaded(t)}_loadJSEntrypoint(t,i,r){let e=typeof i=="function";if(!this._scriptLoaded){this._scriptLoaded=!0;let n=this._createScriptTag(t,r);if(e)console.debug("Injecting <script> tag. Using callback."),this._onEntrypointLoaded=i,document.head.append(n);else return new Promise((a,o)=>{console.debug("Injecting <script> tag. Using Promises. Use the callback approach instead!"),this._didCreateEngineInitializerResolve=a,n.addEventListener("error",o),document.head.append(n)})}}async _loadWasmEntrypoint(t,i,r,e){if(!this._scriptLoaded){this._scriptLoaded=!0,this._onEntrypointLoaded=e;let{mainWasmPath:n,jsSupportRuntimePath:a}=t,o=u(r,n),l=u(r,a);this._ttPolicy!=null&&(l=this._ttPolicy.createScriptURL(l));let m=WebAssembly.compileStreaming(fetch(o)),c=await import(l),w;t.renderer==="skwasm"?w=(async()=>{let d=await i.skwasm;return window._flutter_skwasmInstance=d,{skwasm:d.wasmExports,skwasmWrapper:d,ffi:{memory:d.wasmMemory}}})():w={};let f=await c.instantiate(m,w);await c.invoke(f)}}_createScriptTag(t,i){let r=document.createElement("script");r.type="application/javascript",i&&(r.nonce=i);let e=t;return this._ttPolicy!=null&&(e=this._ttPolicy.createScriptURL(t)),r.src=e,r}};async function T(s,t,i){if(t<0)return s;let r,e=new Promise((n,a)=>{r=setTimeout(()=>{a(new Error(`${i} took more than ${t}ms to resolve. Moving on.`,{cause:T}))},t)});return Promise.race([s,e]).finally(()=>{clearTimeout(r)})}var v=class{setTrustedTypesPolicy(t){this._ttPolicy=t}loadServiceWorker(t){if(!t)return console.debug("Null serviceWorker configuration. Skipping."),Promise.resolve();if(!("serviceWorker"in navigator)){let o="Service Worker API unavailable.";return window.isSecureContext||(o+=`
 The current context is NOT secure.`,o+=`
