--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
         }
 
         body {
+          background-image: url('asset/images/background.jpg');
+          background-size: cover;
+          background-position: center;
+          background-repeat: no-repeat;
+          background-attachment: fixed;
           font-family: 'Roboto', sans-serif;
-          background-color: #ffffff;
           color: #333;
           padding: 20px 36px; /* Reduced padding above */
         }
