--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         }
 
         body {
-          background-image: url('asset/images/background.jpg');
+          background-image: url('assets/images/background.jpg');
           background-size: cover;
           background-position: center;
           background-repeat: no-repeat;
