--- a/index.html
+++ b/index.html
@@ -270,16 +270,15 @@ if (!window._flutter) {
 _flutter.buildConfig = {"engineRevision":"a18df97ca57a249df5d8d68cd0820600223ce262","builds":[{"compileTarget":"dart2js","renderer":"canvaskit","mainJsPath":"main.dart.js"}]};
 
 
-const loading = document.createElement('div');
-document.body.appendChild(loading);
-loading.textContent = "Loading Entrypoint...";
+  const loading = document.getElementById('loader');
+  loading.style.display = 'block'; // Show the loader spinner
+
 _flutter.loader.load({
   onEntrypointLoaded: async function(engineInitializer) {
-    loading.textContent = "Initializing engine...";
     const appRunner = await engineInitializer.initializeEngine();
-
-    loading.textContent = "Running app...";
     await appRunner.runApp();
+     // Hide the loader once the app is running
+      loading.style.display = 'none';
   }
 });
   </script> 
