--- a/index.html
+++ b/index.html
@@ -242,38 +242,29 @@
 </div>
 
 <script>
-  // Trigger Dart/Flutter from JavaScript
   function triggerFlutterWeb() {
-    if (window.flutterAppReady && typeof window.flutterAppReady === 'function') {
-      window.flutterAppReady();
-    } else {
-      alert('Flutter app is still loading or not available.');
-    }
-  }
-</script>
+    const loading = document.getElementById('loader');
+    loading.style.display = 'block'; // Show loader
 
-<script>
-  const loading = document.getElementById('loader');
-  loading.style.display = 'block'; // Show the loader spinner
+    _flutter.buildConfig = {
+      "engineRevision": "a18df97ca57a249df5d8d68cd0820600223ce262",
+      "builds": [
+        {
+          "compileTarget": "dart2js",
+          "renderer": "canvaskit",
+          "mainJsPath": "main.dart.js"
+        }
+      ]
+    };
 
-  _flutter.buildConfig = {
-    "engineRevision": "a18df97ca57a249df5d8d68cd0820600223ce262",
-    "builds": [
-      {
-        "compileTarget": "dart2js",
-        "renderer": "canvaskit",
-        "mainJsPath": "main.dart.js"
+    _flutter.loader.load({
+      onEntrypointLoaded: async function(engineInitializer) {
+        const appRunner = await engineInitializer.initializeEngine();
+        await appRunner.runApp();
+        loading.style.display = 'none'; // Hide loader
       }
-    ]
-  };
-
-  _flutter.loader.load({
-    onEntrypointLoaded: async function(engineInitializer) {
-      const appRunner = await engineInitializer.initializeEngine();
-      await appRunner.runApp();
-      loading.style.display = 'none'; // Hide the loader once app is running
-    }
-  });
+    });
+  }
 </script>
 
 </body>
